--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,1 +1,5 @@
 blank_issues_enabled: false
+contact_links:
+  - name: Share Ideas or Feature Requests
+    url: https://github.com/PullPro/community/discussions
+    about: Have a new idea or feature request? Share it in our Discussions tab!
